--- a/css/scss/_buttons.scss
+++ b/css/scss/_buttons.scss
@@ -1,29 +1,39 @@
 /* Buttons */
-.btn {
-	padding: 15px 80px;
-	border-radius: 5px;
-	font-family: 'Cera Round Pro';
-	font-style: normal;
-	font-weight: 500;
-	font-size: 14px;
-	line-height: 150%;
-	letter-spacing: 0.02em;
-	border: 2px solid;
-}
 
-.btn-sm {
-	padding: 12px 60px;
-}
+// .btn-primary {
+// 	background-color: var(--main-color);
+// 	color: var(--white-color);
+// 	border-color: var(--main-color);
+// 	transition: all 0.3s ease-in-out;
+// }
+// .btn-primary:hover {
+// 	background-color: transparent;
+// 	color: var(--main-color);
+// 	border-color: var(--main-color);
+// 	transition: all 0.3s ease-in-out;
+// }
 
-.btn-primary {
-	background-color: var(--main-color);
-	color: var(--white-color);
-	border-color: var(--main-color);
-	transition: all 0.3s ease-in-out;
-}
-.btn-primary:hover {
-	background-color: transparent;
-	color: var(--main-color);
-	border-color: var(--main-color);
-	transition: all 0.3s ease-in-out;
+.btn-radio {
+	color: $black !important;
+	border-color: rgba($black, 0.1) !important;
+	border-radius: 10px !important;
+	padding: 7px 40px !important;
+	font-weight: 400 !important;
+	margin: 5px;
+
+  &:hover {
+    color: $secondary;
+    background-color: transparent;
+    border-color: $secondary;
+  }
+
+  .btn-check:checked + &,
+  .btn-check:active + &,
+  &:active,
+  &.active,
+  &.dropdown-toggle.show {
+    color: $secondary !important;
+    background-color: transparent;
+    border-color: $secondary !important;
+  }
 }
