--- a/css/scss/_forms.scss
+++ b/css/scss/_forms.scss
@@ -1,17 +1,15 @@
 /* Forms */
-
-// .form-control {
-// 	background: var(--white-color);
-// 	border: 1px solid var(--bg-light-color);
-// 	border-radius: 2px;
-// 	font-family: 'Open Sans';
-// 	font-style: normal;
-// 	font-weight: 400;
-// 	font-size: 12px;
-// 	line-height: 150%;
-// 	color: var(--black-color);
-// 	padding: 12px 25px 15px;
-// }
+.form-check-input {
+    margin-right: 20px;
+}
+.form-check-label {
+    font-family: 'Cera Round Pro';
+    font-weight: 400;
+    letter-spacing: 0.02em;
+}
+.form-control {
+    letter-spacing: 0.02em;
+}
 // .form-control::placeholder {
 // 	color: var(--gray-color);
 // }
