--- a/css/scss/_text.scss
+++ b/css/scss/_text.scss
@@ -11,14 +11,18 @@ h1, h2, h3, h4, h5, h6 {
 	clear: both;
 }
 h1 {
+	font-weight: 700 !important;
 	font-size: 40px;
-	font-weight: 700;
 }
 h2 {
-	font-weight: 500;
+	font-weight: 500 !important;
 	font-size: 35px;
 }
-
+h3 {
+	font-weight: 500 !important;
+	font-size: 25px;
+}
+p {font-family: 'Open Sans';}
 ul {
 	margin-top: 0;
 	margin-bottom: 30px;
@@ -33,3 +37,6 @@ li {
 	line-height: 200%;
 	letter-spacing: 0.02em;
 }
+
+.fs-12 {font-size: 12px;}
+.fs-14 {font-size: 14px;}
