--- a/css/scss/_buttons.scss
+++ b/css/scss/_buttons.scss
@@ -1,17 +1,17 @@
 /* Buttons */
 
-// .btn-primary {
-// 	background-color: var(--main-color);
-// 	color: var(--white-color);
-// 	border-color: var(--main-color);
-// 	transition: all 0.3s ease-in-out;
-// }
-// .btn-primary:hover {
-// 	background-color: transparent;
-// 	color: var(--main-color);
-// 	border-color: var(--main-color);
-// 	transition: all 0.3s ease-in-out;
-// }
+.btn-main {
+	background-color: $primary;
+	color: $white;
+	border-color: $primary;
+	transition: all 0.3s ease-in-out;
+  &:hover {
+    background-color: transparent;
+    color: $primary;
+    border-color: $primary;
+    transition: all 0.3s ease-in-out;
+  }
+}
 
 .btn-radio {
 	color: $black !important;
