--- a/css/scss/_main.scss
+++ b/css/scss/_main.scss
@@ -6,19 +6,40 @@
     padding-bottom: 89px;
     padding-left: 50px !important;
     padding-right: 50px !important;
+    .main-img {
+        width: 100%;
+    }
 }
 .form-wrapper {
     padding: 50px;
+    .agreement {
+        font-size: 12px;
+        font-family: 'Cera Round Pro';
+        font-weight: 400;
+        line-height: 150%;
+        letter-spacing: 0.02em;
+        margin-top: 6px;
+    }
 }
 .mb-10 {margin-bottom: 10px;}
 .mb-20 {margin-bottom: 20px;}
-.rounded-20 {
-    border-radius: 20px;
-}
+.mx-10 {margin-left: 10px; margin-right: 10px;}
+
+.rounded-20 {border-radius: 20px;}
 
 #tariff {
     padding-top: 55px;
     padding-bottom: 55px;
+    .tariff-name {
+        margin-bottom: 12.5px;
+    }
+    .tariff-desc {
+        p {
+            font-size: 13px;
+            color: $gray;
+            margin-bottom: 25px;
+        }
+    }
 }
 
 .site-footer {
@@ -26,6 +47,8 @@
     padding-bottom: 21px;
     .site-info {
         padding: 20px 0;
+        border-bottom: 1px solid #dee2e6 !important;
+        border-top: 1px solid #dee2e6 !important;
         .copyright {
             color: $light-gray;
             font-family: 'Cera Round Pro';
